--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.0.0",
     "body-parser": "^1.20.3",
+    "consolidate": "^1.0.4",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mariadb": "^3.4.0",
     "mysql2": "^3.12.0",
+    "path": "^0.12.7",
+    "swig": "^1.4.2",
     "tailwindcss": "^3.4.17",
     "typeorm": "^0.3.20"
   },
