route stuff + package updates

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/cli": "^4.0.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
-    "consolidate": "^1.0.4",
+    "consolidate": "^0.16.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-error-handler": "^1.1.0",
     "mariadb": "^3.4.0",
     "mysql2": "^3.12.0",
     "path": "^0.12.7",
