--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-css": "npx @tailwindcss/cli -i .tailwind.css -o /css/app.css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tailwindcss/cli": "^4.0.0",
+    "@tailwindcss/cli": "^4.0.9",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "daisyui": "^5.0.0-beta.9",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-error-handler": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.0",
-    "mysql2": "^3.12.0",
     "path": "^0.12.7",
-    "tailwindcss": "^3.4.17",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "daisyui": "^4.12.23"
+    "tailwindcss": "^4.0.9"
   }
 }
