--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "body-parser": "^1.20.3",
     "daisyui": "^5.0.0-beta.9",
     "dotenv": "^16.4.7",
-    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-error-handler": "^1.1.0",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.0",
+    "nodemailer": "^6.10.0",
     "path": "^0.12.7",
     "typeorm": "^0.3.20"
   },
