--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.0",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "path": "^0.12.7",
     "typeorm": "^0.3.20"
